# taskroot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_debt.yml
.github/workflows/: ci.yml
backend/: .env.example  manage.py  schema.yml
backend/core/: admin.py  urls.py
backend/core/migrations/: 0004_contract_client_name_contract_name.py  0005_rename_budget_hours_total_contract_budget_hours_and_more.py  0006_staff_expected_hours_per_week.py  0007_remove_deliverabletimeentry_core_delive_staff_i_0b8b5b_idx_and_more.py  0008_deliverable_charge_code.py  0009_remove_deliverable_start_date_and_more.py
backend/core/models/: contract.py  deliverable.py  staff.py  task.py  (+3 more)
backend/requirements/: base.txt  dev.txt
backend/taskroot/: settings.py  wsgi.py
core/: admin.py  urls.py
core/migrations/: 0001_initial.py  0002_staff_user.py  0003_deliverablestatusupdate_updated_at_and_more.py
core/models/: __init__.py  contract.py  deliverable.py  deliverable_assignment.py  deliverable_status_update.py  deliverable_time_entry.py  staff.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  theme.ts
requirements/: base.txt  dev.txt
taskroot/: asgi.py  settings.py  urls.py
tests/api/: conftest.py  test_backend_edge_cases.py  test_coverage_edge_cases.py  test_filters_edge_cases.py  test_filters_ordering.py  test_health.py  test_idempotency.py  test_jwt_auth_boundary.py  test_permission_classes.py  test_permissions_edge_cases.py  test_reporting.py  test_time_entries_permssions.py  test_v1_crud.py  test_view_permissions.py
tests/core/: test_constraints.py  test_model_methods.py
(+54 files in other folders)
