[project]
name = "taskroot"
version = "0.1.0"
description = "TaskRoot project tracking application"
readme = "README.md"
requires-python = ">=3.13"

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=core --cov=taskroot --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "taskroot.settings"
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["core", "taskroot"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/management/commands/*",
    "*/asgi.py",
    "*/wsgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
